Add state to Work. Add an update API.
Work can be one of a fixed number of states.
ANNULLED is a special case state to effectively remove Work from consideration (the unique key can then be reused).
Work can be updated to change state or info.
